Update URL template for updater